fdo#53442 SwTxtPaintInfo::_DrawBackBrush: color multi-para comment ranges

Change-Id: Ieb9a33cda8297b432e1d0ea8224ba9231b6ac2c1